--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,20 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 
-<img src=" <%= userInfo.avatar_url %> ">
-<h3> <%= userInfo.name %> </h3>
-<p> <%= userInfo.location %> </p>
-<div id="gallery"> 
-<% userShots.forEach( projets => { %>
-    
-    <!-- <p>  <%= projets.title %> </p> <br/> -->
-    <img src="<%= projets.images["two_x"] %>"> <br/>
-    
-    
-<% })  %>
-</div>
+<body>
 
+    <img src=" <%= userInfo.avatar_url %> ">
+    <h3> <%= userInfo.name %> </h3>
+    <p> <%= userInfo.location %> </p>
+
+    <div id="gallery">
+        <% userShots.forEach( projets => { %>
+
+            <!-- <p>  <%= projets.title %> </p> <br/> -->
+            <img src="<%= projets.images["two_x"] %>"> <br/>
+
+
+        <% })  %>
+    </div>
+
+    <div id="typed-strings">
+        <span> je suis du chocolat je suis </span>
+        <span> je suis bonjour je suis </span>
+        <span> je suis salut ça va ? je suis </span>
+        <span> je suis en recherche d'alternance je suis </span>
+    </div>
+
+    <div id="scriptTester">
+        <span id="typed"></span>
+
+        <script>
+            var typed = new Typed('#typed', {
+                stringsElement: '#typed-strings',
+                typeSpeed: 60,
+                loop: true
+            });
+        </script>
+    </div>
+
+    <div id="userlinks">
+
+        <% const keyLinks = Object.keys(userInfo.links) %>
+        <% const valuesLinks = Object.values(userInfo.links) %>
+
+        <% for (i=0; i<keyLinks.length; i++) { %>
+           <a href="<%=valuesLinks[i]%>"> <%= keyLinks[i] %> <br/> </a>
+
+        <% } %>
+    </div>
+
+    <br/> <br/>
+    <a href="/test"> <button type="button" class="btn btn-primary"> test.ejs </button> </a>
+    <br/> <br/>
+
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-warning">Warning</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-light">Light</button>
+    <button type="button" class="btn btn-dark">Dark</button>
+
+    <script>
+      console.log(window.location.pathname)
+    </script>
+</body>
 </html>
