--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -6,14 +6,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="../../index.js"></script>
+    <script src="./index.js"></script>
 
 </head>
 
 <body>
 
   <p> <%- userInfo.bio %> </p>
-  <p> <%- parsed_bio %> </p>
+
 
 </body>
 </html>
