rendering parsed bio

--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -12,7 +12,7 @@
 
 <body>
 
-  <p> <%- userInfo.bio %> </p>
+  <p style="color: <%- parsed_bio.colors[1] %>"> <%- parsed_bio.text_bio[0] %> </p>
 
 
 </body>
