--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -5,14 +5,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
+    <link rel='preconnect' href='https://fonts.googleapis.com'>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="./index.js"></script>
+    <link  rel="stylesheet" href="<%- parsed_bio.font_family[0] %>">
 
 </head>
 
 <body>
 
-  <p style="color: <%- parsed_bio.colors[1] %>"> <%- parsed_bio.text_bio[0] %> </p>
+  <p style="color: <%- parsed_bio.colors[2] %>; font-family: <%-parsed_bio.font_names[1] %>"> <%- parsed_bio.text_bio[2] %> </p>
 
 
 </body>
