--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <div id="header">
     <div id="logo">
-        <a><img src="https://freesvg.org/img/circle-15.png"></a>
+        <a href="home"><img src="https://freesvg.org/img/circle-15.png"></a>
     </div>
     <div id="burgerMenu">
         <a><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png"></a>
