--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,14 +13,14 @@
         <div id="personnalLogo">
             <img src="">
             <p>Inserer Image SVG ICI</p>
-        </div> 
+        </div>
         <div id="socialMedias">
-            <img id="instagramIcon" src="https://icones.pro/wp-content/uploads/2021/02/instagram-icone-noir.png">
-            <img id="linkedInIcon" src="https://cdn-icons-png.flaticon.com/512/61/61109.png">
-            <img id="dribbbleIcon" src="https://cdn.iconscout.com/icon/free/png-256/dribbble-33-90225.png">
+            <a href="<%- userInfos.links.instagram %>"><img id="instagramIcon" src="https://icones.pro/wp-content/uploads/2021/02/instagram-icone-noir.png"></a>
+            <a href="<%- userInfos.links.linkedin %>"><img id="linkedInIcon" src="https://cdn-icons-png.flaticon.com/512/61/61109.png"></a>
+            <a href="https://dribbble.com"><img id="dribbbleIcon" src="https://cdn.iconscout.com/icon/free/png-256/dribbble-33-90225.png"></a>
         </div>
         <div id="personnalText">
-            <p>I'm Blabla, a <span>creative</span> design student</p>
+            <p> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></p>
         </div>
         <div id="diveButton">
             <p>Let's dive right in</p>
@@ -52,16 +52,30 @@
     }
 
     #socialMedias{
+        width: fit-content;
+        height: fit-content;
         position:absolute;
         display:grid;
         float:right;
         margin-left:90%;
         margin-top:-30vh;
+        /* border: 1px solid red; */
     }
-    #socialMedias img{
+    /* #socialMedias a{
         max-width:3em;
         margin-bottom:1.5em;
+    } */
+    #socialMedias a{
+      width: 50px;
+      height: 50px;
+      margin: 8px;
+      /* border: 1px solid black; */
     }
+    #instagramIcon, #linkedInIcon, #dribbbleIcon{
+      width: 50px;
+      height: 50px;
+    }
+
     #personnalText{
         width:65%;
         margin-left:18%;
