links in footer contact & home

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -14,15 +14,15 @@
             <h1>CONTACT ME</h1>
             <div id="socialMedia">
                 <div class="socialMediaIcons" id="mailInfo">
-                <a href="mailto:<%- parsed_bio.email %>"><img src="https://icon-library.com/images/e-mail-icon-png/e-mail-icon-png-11.jpg"></a>
+                <a href="mailto:<%- parsed_bio.email %>" target="_blank"><img src="https://icon-library.com/images/e-mail-icon-png/e-mail-icon-png-11.jpg"></a>
                     <p> <%- parsed_bio.email %></p>
                 </div>
                 <div class="socialMediaIcons" id="linkedInInfo">
-                    <a href="<%- userInfos.links.linkedin %>"><img src="https://cdn-icons-png.flaticon.com/512/61/61109.png"></a>
+                    <a href="<%- userInfos.links.linkedin %>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/61/61109.png"></a>
                     <p> <%- parsed_bio.linkedin %> </p>
                 </div>
                 <div class="socialMediaIcons" id="instagramInfo">
-                    <a href="<%- userInfos.links.instagram %>"><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png"></a>
+                    <a href="<%- userInfos.links.instagram %>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png"></a>
                     <p><%- parsed_bio.instagram %></p>
                 </div>
             </div>
