partials home & contact

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -13,33 +13,11 @@
         <div class="contactMe">
             <h1>CONTACT ME</h1>
             <div id="socialMedia">
-                <div class="socialMediaIcons" id="mailInfo">
-                <a href="mailto:<%- parsed_bio.email %>" target="_blank"><img src="https://icon-library.com/images/e-mail-icon-png/e-mail-icon-png-11.jpg"></a>
-                    <p> <%- parsed_bio.email %></p>
-                </div>
-                <div class="socialMediaIcons" id="linkedInInfo">
-                    <a href="<%- userInfos.links.linkedin %>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/61/61109.png"></a>
-                    <p> <%- parsed_bio.linkedin %> </p>
-                </div>
-                <div class="socialMediaIcons" id="instagramInfo">
-                    <a href="<%- userInfos.links.instagram %>" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png"></a>
-                    <p><%- parsed_bio.instagram %></p>
-                </div>
+                <%- include('../partials/contactSocialMedia')%>
             </div>
             <h2>WANT MORE ?</h2>
             <div id="wantMore"></div>
-                <div class="wantMoreIcons" id="CV">
-                    <a href="<%- parsed_bio.lien_cv %>" target="_blank">
-                      <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
-                    </a>
-                    <p>Curriculum Vitae</p>
-                </div>
-                <div class="wantMoreIcons" id="portfolio">
-                    <a href="<%- parsed_bio.lien_book %>" target="_blank">
-                      <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
-                    </a>
-                    <p>Portfolio</p>
-                </div>
+                <%- include('../partials/downloadCvPortfolio')%>
             </div>
         </div>
         <div id="QRcode">
@@ -67,58 +45,12 @@
             height:100vh;
         }
 
-        .contactMe{
-            margin-top:2em;
-            margin-left:22%;
-            margin-bottom:1em;
-        }
-        .contactMe h1{
-            font-family: 'Big Shoulders Display', cursive;
-            font-size:80px;
-            margin-bottom:80px;
-        }
-        .contactMe h2{
-            font-family: 'Big Shoulders Display', cursive;
-            font-size:60px;
-            margin-top:1em;
-        }
-        .socialMediaIcons img{
-            max-width:50px;
-        }
-        .socialMediaIcons p{
-            margin-left:50px;
-            margin-top:10px;
-        }
-        .wantMoreIcons p{
-            margin-top:20px;
-            margin-left:50px;
-        }
-        .wantMoreIcons img{
-            max-width:80px;
-        }
-        #mailInfo{
-            display:flex;
-            margin: 20px;
-        }
-        #linkedInInfo{
-            display:flex;
-            margin: 20px;
-        }
-        #instagramInfo{
-            display:flex;
-            margin: 20px;
-        }
-        #CV{
-            display:flex;
-        }
-        #portfolio{
-            display:flex;
-        }
         #QRcode{
             margin-top:-500px;
             margin-right:10%;
             float:right;
         }
+
         #QRcode img{
             width:25em;
         }
