--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/style.css">
         <link rel='preconnect' href='https://fonts.googleapis.com'>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-        <script src="./index.js"></script>
+        <!-- <script src="./index.js"></script> -->
         <%- parsed_setting_desc.fonts %>
 
         <style>
