--- a/views/partials/contactHead.ejs
+++ b/views/partials/contactHead.ejs
@@ -1,8 +1,3 @@
 <meta charset="UTF-8">
 <title>Contact me</title>
-
-<!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&family=Roboto:wght@700&display=swap');
-</style>
+<%- include('../partials/commonHead'); %>
