--- a/views/partials/commonHead.ejs
+++ b/views/partials/commonHead.ejs
@@ -1,8 +1,20 @@
-
-
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&family=Roboto:wght@700&display=swap');
+  *{
+  	margin: 0px;
+  	padding: 0px;
+  	box-sizing: border-box;
+  	scroll-behavior: smooth;
+  }
+
+  body::-webkit-scrollbar {
+      display: none;
+  }
+
+  body {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+  }
 </style>
 <%- parsed_setting_desc.font_link[0] %>
