--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,10 +8,11 @@
 </div>
 
 <style>
+
     body{
         padding-top:50px;
-        margin-left:15em;
     }
+
     #header{
         height:80px;
     }
@@ -21,15 +22,41 @@
         float:left;
         margin-left:15%;
     }
+
     #logo img{
         width:60px;
     }
+
     #burgerMenu{
         float:right;
         margin-right:15%;
     }
+    
     #burgerMenu img{
         width:60px;
     }
+    @media screen and (max-width:980px){
 
+        #header {
+            height: 160px;
+        }
+
+        #logo {
+            margin-left: 32px;
+        }
+
+        #logo img {
+            width: 120px;
+            color: white;
+        }
+
+        #burgerMenu{
+            float:right;
+            margin-right:32px;
+        }
+
+        #burgerMenu img {
+            width: 120px;
+        }
+    }
 </style>
