--- a/views/partials/contactSocialMedia.ejs
+++ b/views/partials/contactSocialMedia.ejs
@@ -11,28 +11,103 @@
     <p><%- parsed_bio.instagram %></p>
 </div>
 
-
 <style>
-  .contactMe{
-      margin-top:2em;
-      margin-left:22%;
-      margin-bottom:1em;
-  }
-  .contactMe h1{
-      font-family: 'Big Shoulders Display', cursive;
-      font-size:80px;
-      margin-bottom:80px;
-  }
-  .contactMe h2{
-      font-family: 'Big Shoulders Display', cursive;
-      font-size:60px;
-      margin-top:1em;
-  }
-  .socialMediaIcons img{
-      max-width:50px;
-  }
-  .socialMediaIcons p{
-      margin-left:50px;
-      margin-top:10px;
-  }
+    body {
+        /* background-color: black; */
+        /* color: white; */
+    }
+
+    #contactContainer {
+        border: red 1px solid;
+        width: 100%;
+    }
+
+    #contactMe{
+        margin-top:2em;
+        margin-left: 15%;
+        margin-bottom:1em;
+        width: calc(100% - 15%);
+        border: 1px solid pink;
+        font-family: '<%- parsed_setting_desc.font_name[1] %>', cursive;
+    }
+
+    #contactMe h1{
+        font-size:80px;
+        margin-bottom:80px;
+        width: 100%;
+    }
+
+    #contactMe h2{
+        font-family: '<%- parsed_setting_desc.font_name[1] %>', cursive;
+        font-size:60px;
+        margin-top:1em;
+    }
+
+    #moreDiv {
+        margin-top:2em;
+        margin-left: 15%;
+        margin-bottom:1em;
+        width: calc(100% - 15%);
+        border: 1px solid pink;
+        font-family: '<%- parsed_setting_desc.font_name[1] %>', cursive;
+    }
+
+    #contactTitle {
+        border: 1px solid orange;
+    }
+
+    .socialMediaIcons img{
+        width:50px;
+    }
+
+    .socialMediaIcons p{
+        margin-left:50px;
+        margin-top:10px;
+    }
+
+    .container{
+        margin:0px;
+        width:100vw;
+        height:100vh;
+    }
+
+    #QRcode{
+        margin-top:-500px;
+        margin-right:10%;
+        float:right;
+    }
+
+    #QRcode img{
+        width:25em;
+    }
+
+    @media (max-width: 1250px) {
+
+        #QRcode{
+            display:contents;
+        }
+        #QRcode img{
+            margin-left:15%;
+            margin-right:15%;
+        }
+
+        .footer{
+            position:relative
+        }
+    }
+
+    @media screen and (max-width:980px){
+
+        #contactMe {
+            margin-left: 0%;
+            width: 100%;
+        }
+
+        footer{
+            display:grid;
+            text-align:center;
+            background-color:red;
+        }
+    }
+
   </style>
