--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 <div id="credits">
-    <p>codé par tic et tac</p>
+    <p>codé par Bassam, Nils et Mathieu</p>
 </div>
 <div id="socialMedias">
     <a href="<%- userInfos.links.instagram %>" target="_blank"><img id="leftIcon" src="https://www.pngplay.com/wp-content/uploads/13/Black-And-White-Instagram-Logo-PNG-Photos.png"></a>
@@ -13,7 +13,7 @@
 
 <style>
     footer{
-
+        width: 100%;
         color:white;
         background-color:black;
         padding:20px;
@@ -21,8 +21,9 @@
         font-family:"Roboto", sans-serif;
         margin-top:11px;
     }
+
     .footer{
-        position:absolute;
+        position:relative;
         bottom:0;
     }
     .container {
@@ -57,10 +58,9 @@
         margin-right:10%;
     }
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 980px) {
 
         footer{
-            background-color:red;
             display:grid;
             text-align:center;
         }
