--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -1,45 +1,62 @@
-    <!DOCTYPE html>
+      <!DOCTYPE html>
     <html lang="en">
     <head>
       <meta charset="utf-8">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/style.css">
         <link rel='preconnect' href='https://fonts.googleapis.com'>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!-- <script src="./index.js"></script> -->
+        <%- include('../partials/homeHead'); %>
 
-        <style>
-          p{
-            color: <%- parsed_setting_desc.colors[2] %>;
-            font-family: <%- parsed_setting_desc.font_name[1] %>;
-          }
+        <%- include('../partials/backgroundAndFonts') %>
 
-          body{
-            background-image: url('<%- parsed_setting_desc.background[0] %>');
-            background-position: center;
-            background-repeat: repeat-y;
-          }
-
-        </style>
     </head>
 
-
-    <body class="container col sm-12">
+    <body>
       <header>
           <%- include('../partials/header'); %>
       </header>
 
 
-        <% projectGalleryArray.forEach(item => {
-          if (helper.isImg(item) == false){ %>
-            <p class="textProject"> <%- item %> </p>
-        <% }else{ %>
-            <img src="<%- item %>" class="imgProjet">
-        <% }
-      }) %>
+<!-- ######################################### INTRO PROJECT ######################################### -->
 
+        <!-- <div id="IntroProjectContainer">
+          <div id="titleProject">
 
+          </div>
+          <div id="imageProjetMain">
+            <img src="<%# shotsInfos. %>"
+          </div>
+        </div> -->
+
+<!-- ########################## DESCRIPTION PROJECT (SOUS FORME DE GALLERY) ########################## -->
+
+        <div id="galleryContainer">
+          <% projectGalleryArray.forEach(item => {
+            if (helper.isImg(item) == false){ %>
+              <p class="textProject"> <%- item %> </p>
+          <% }else{ %>
+              <img src="<%- item %>" class="imgProjet">
+          <% }
+          }) %>
+        </div>
+
+        <style>
+          #galleryContainer{
+            width: 100vw;
+            height: fit-content;
+            border: 1px solid red;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+          }
+          #galleryContainer img{
+
+          }
+        </style>
+
+<!-- ############################################ FOOTER ############################################ -->
     <footer class="footer col sm-12">
         <%# include('../partials/footer'); %>
     </footer>
