--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/homeHead'); %>
 </head>
-<body class="container col sm-12">
+<body class="container-fluid">
 
     <header>
         <%- include('../partials/header'); %>
