--- a/views/partials/commonHead.ejs
+++ b/views/partials/commonHead.ejs
@@ -1,18 +1,3 @@
-<style>
-  *{
-  	margin: 0px;
-  	padding: 0px;
-  	box-sizing: border-box;
-  	scroll-behavior: smooth;
-  }
-
-  body::-webkit-scrollbar {
-      display: none;
-  }
-
-  body {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-  }
-</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="../../style.css">
 <%- parsed_setting_desc.font_link[0] %>
