Co-authored-by: Nils Boisson <zaynbsn@users.noreply.github.com>

--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -19,6 +19,6 @@
 
 
 
-    <footer class="footer col sm-12">
+    <!-- <footer class="footer col sm-12">
         <%# include('../partials/footer'); %>
-    </footer>
+    </footer> -->
