--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../partials/homeHead'); %>
+    <%- include('../partials/heads/homeHead'); %>
     <%- include('../partials/backgroundAndFonts') %>
 </head>
 <body class="container col sm-12">
 
   <header>
-      <%- include('../partials/header'); %>
+      <%- include('../partials/layout/header'); %>
   </header>
 
 
@@ -22,39 +22,12 @@
     </div>
   </div>
 
-      <!-- <div id="socialMedias">
+      <div id="socialMedias">
           <%- include('../partials/socialMedia'); %>
-      </div> -->
-
-<style>
-
-  #contentContainer{
-    width: 100%;
-    height: fit-content;
-    border: 1px solid green;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-  }
-
-  #filters{
-    width: 60%;
-    height: 100px;
-    border: 1px solid green;
-    display: flex;
-    justify-content: center;
-  }
-
-
-</style>
-
-
-
-
+      </div>
 
     <!-- <footer class="footer col sm-12">
-        <%- include('../partials/footer'); %>
+        <%# include('../partials/layout/footer'); %>
     </footer> -->
 
 </body>
