--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -51,15 +51,12 @@
             justify-content: center;
             align-items: center;
           }
-          #galleryContainer img{
-
-          }
         </style>
 
 <!-- ############################################ FOOTER ############################################ -->
-    <footer class="footer col sm-12">
+    <!-- <footer class="footer col sm-12">
         <%# include('../partials/footer'); %>
-    </footer>
+    </footer> -->
 
   </body>
   </html>
