--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <%- include('../partials/contactHead'); %>
+    <%- include('../partials/heads/contactHead'); %>
 </head>
 
-<body class="container col sm-12">
+<body class="container">
 
     <header>
-        <%- include('../partials/header'); %>
+        <%- include('../partials/layout/header'); %>
     </header>
 
     <div id="contactContainer">
@@ -35,9 +35,8 @@
         </div>
 
 
-    <footer class="footer">
-        <%- include('../partials/footer'); %>
-    </footer>
-
+    <!-- <footer class="footer col sm-12">
+        <%# include('../partials/layout/footer'); %>
+    </footer> -->
 </body>
 </html>
