--- a/views/pages/labs.ejs
+++ b/views/pages/labs.ejs
@@ -19,6 +19,6 @@
 
 
 
-    <footer class="footer col sm-12">
+    <!-- <footer class="footer col sm-12">
         <%# include('../partials/footer'); %>
-    </footer>
+    </footer> -->
