--- a/public/style/contact.css
+++ b/public/style/contact.css
@@ -1,5 +1,4 @@
 #contactContainer {
-    border: red 1px solid;
     width: 100%;
 }
 
@@ -8,19 +7,19 @@
     margin-left: 15%;
     margin-bottom:1em;
     width: calc(100% - 15%);
-    border: 1px solid pink;
-    font-family: '<%- parsed_setting_desc.font_name[1] %>', cursive;
+    font-family: var(--custom-corps-font), 'sans-serif';
 }
 
 #contactMe h1{
     font-size:80px;
     margin-bottom:80px;
     width: 100%;
+    font-family: var(--custom-title-font), 'sans-serif';
 }
 
-#contactMe h2{
-    font-family: '<%- parsed_setting_desc.font_name[1] %>', cursive;
-    font-size:60px;
+#moreDiv h2{
+    font-family: var(--custom-title-font), 'sans-serif';
+    font-size:32px;
     margin-top:1em;
 }
 
@@ -29,12 +28,7 @@
     margin-left: 15%;
     margin-bottom:1em;
     width: calc(100% - 15%);
-    border: 1px solid pink;
-    font-family: '<%- parsed_setting_desc.font_name[1] %>', cursive;
-}
-
-#contactTitle {
-    border: 1px solid orange;
+    font-family: var(--custom-corps-font), 'sans-serif';
 }
 
 .socialMediaIcons img{
