--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -17,7 +17,7 @@
 	margin-top:1em;
 }
 #personnalText p{
-	font-family: "Roboto", sans-serif;
+	font-family: var(--custom-title-font), 'sans-serif';
 	font-size:4em;
 }
 #personnalText span{
