--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -1,4 +1,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="/style/style.css">
 <%- parsed_setting_desc.font_link[0] %>
+<style>
+    :root {
+        --custom-title-font: <%- parsed_setting_desc.font_name[0] %>;
+        --custom-corps-font: <%- parsed_setting_desc.font_name[1] %>;
+    }
+</style>
 
