--- a/public/style/socialMedia.css
+++ b/public/style/socialMedia.css
@@ -25,3 +25,18 @@
     width: 50px;
     height: 50px;
 }
+
+@media screen and (max-width:980px) {
+
+    #socialMedias a{
+        width: 80px;
+        height: 80px;
+        margin: 10px -4px 10px 0;
+    }
+    
+    #instagramIcon, #linkedInIcon, #dribbbleIcon{
+        width: 100%;
+        height: 100%;
+    }
+    
+}
