--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,13 +11,13 @@
 
     <main>
         <div id="personnalLogo">
-            <img src="<%- parsed_bio.image_home[1] %>"  id="imgHome">
+            <img src="<%- parsed_bio.image_home[0] %>"  id="imgHome">
         </div>
         <div id="socialMedias">
             <%- include('../partials/socialMedia'); %>
         </div>
         <div id="personnalText">
-            <p> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></p>
+            <p> <%- parsed_bio.text_bio[0] %> ceci est un test deploy auto</p>
         </div>
         <div id="diveButton">
             <p>Let's dive right in</p>
