back test deploy

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,7 +17,7 @@
             <%- include('../partials/socialMedia'); %>
         </div>
         <div id="personnalText">
-            <p> <%- parsed_bio.text_bio[0] %> ceci est un test deploy auto</p>
+            <p> <%- parsed_bio.text_bio[0] %> <%- parsed_bio.text_bio[1] %></p>
         </div>
         <div id="diveButton">
             <p>Let's dive right in</p>
