--- a/views/partials/backgroundAndFonts.ejs
+++ b/views/partials/backgroundAndFonts.ejs
@@ -1,7 +1,7 @@
 <style>
   p{
-    color: <%- parsed_setting_desc.colors[2] %>;
-    font-family: <%- parsed_setting_desc.font_name[1] %>;
+    color: var(--custom-accent-color);
+    font-family: var(--custom-corps-font);
   }
 
   body{
