--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -9,6 +9,10 @@
         <%- include('../partials/header'); %>
     </header>
 
+    <div id="socialMedias">
+        <%- include('../partials/socialMedia'); %>
+    </div>
+
     <div> <h1>je suis la page about me</h1> </div>
 
 
