--- a/views/pages/labs.ejs
+++ b/views/pages/labs.ejs
@@ -8,7 +8,9 @@
     <header>
         <%- include('../partials/header'); %>
     </header>
-
+    <div id="socialMedias">
+        <%- include('../partials/socialMedia'); %>
+    </div>
     <div> <h1>je suis la page labs</h1> </div>
 
 
