--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -17,7 +17,9 @@
           <%- include('../partials/header'); %>
       </header>
 
-
+      <div id="socialMedias">
+        <%- include('../partials/socialMedia'); %>
+    </div>
 <!-- ######################################### INTRO PROJECT ######################################### -->
 
         <!-- <div id="IntroProjectContainer">
