--- a/public/style/socialMedia.css
+++ b/public/style/socialMedia.css
@@ -1,20 +1,16 @@
 
-#socialMedias{
+.socialMedias{
     width: fit-content;
-    height: fit-content;
-    display:grid;
+    height: 100%;
+    position: fixed;
     float:right;
-    margin-left:90%;
-    margin-top:-30vh;
-    /* border: 1px solid red; */
 }
 
-/* #socialMedias a{
-    max-width:3em;
-    margin-bottom:1.5em;
-} */
+.socialsContainer {
+    height: fit-content;
+}
 
-#socialMedias a{
+.socialMedias a{
     width: 50px;
     height: 50px;
     margin: 8px;
@@ -28,7 +24,7 @@
 
 @media screen and (max-width:980px) {
 
-    #socialMedias a{
+    .socialMedias a{
         width: 80px;
         height: 80px;
         margin: 10px -4px 10px 0;
