--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -4,26 +4,40 @@
     <%- include('../partials/heads/homeHead'); %>
     <%- include('../partials/backgroundAndFonts') %>
 </head>
-<body class="container col sm-12">
-
-  <header>
-      <%- include('../partials/layout/header'); %>
-  </header>
-
-  <div id="contentContainer">
-
-    <div id="titles"> <h1>MY ARTWORKS</h1> </div>
-
-    <div id="filters"></div>
-
-    <div id="gallery">
-      <%- include('../partials/artworksGallery'); %>
+<body class="container">
+  
+  <div class="d-flex justify-content-center align-items-center socialMedias">
+    <div class="d-flex flex-column socialsCotainer">
+      <%- include('../partials/socialMedia'); %>
     </div>
   </div>
 
-      <div id="socialMedias">
-          <%- include('../partials/socialMedia'); %>
+  <header>
+    <%- include('../partials/layout/header'); %>
+  </header>
+  
+  
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-xxl-12 d-flex justify-content-center" id="titles"> 
+      <h1><%- parsed_setting_desc.menu[0] %></h1>
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-xxl-12 d-flex justify-content-center align-items-center" id="filters">
+      <%- include('../partials/artworksFilters') %>
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-xxl-1"></div>
+    <div class="col-xxl-10 d-flex justify-content-center" id="gallery">
+      <div class="row d-flex justify-content-center align-items-center">
+        <%- include('../partials/artworksGallery'); %>
       </div>
+    </div>
+    <div class="col-xxl-1"></div>
+  </div>
 
     <!-- <footer class="footer col sm-12">
         <%# include('../partials/layout/footer'); %>
