--- a/views/partials/artworksGallery.ejs
+++ b/views/partials/artworksGallery.ejs
@@ -1,21 +1,29 @@
+<!-- foreach on Gallery -->
 <% let bool=true;
 for (let i=0; i < shotsInfos.length-1; i++){
   if (bool == true){ %>
-    <div class="galleryItem titleItem">
+    <div class="col-6 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
       <h2> <span><%- shotsInfos[i].title %></span></h2>
+      
+      <%- include('../partials/artworksTags', {i : i}); %>
+      
+
     </div>
 
-    <div class="galleryItem imgItem">
+    <div class="col-6 d-flex justify-content-center align-items-center galleryItem imgItem">
       <img src="<%- shotsInfos[i].images.normal %>">
     </div>
     <% bool = false;
-  }else{ %>
-    <div class="galleryItem imgItem">
+  } else{ %>
+    <div class="col-6 d-flex justify-content-center align-items-center galleryItem imgItem">
       <img src="<%- shotsInfos[i].images.normal %>">
     </div>
 
-    <div class="galleryItem titleItem">
+    <div class="col-6 d-flex flex-column justify-content-center align-items-center galleryItem titleItem">
       <h2> <span><%- shotsInfos[i].title %> </span></h2>
+
+      <%- include('../partials/artworksTags', {i : i}); %>
+
     </div>
     <% bool = true;
   }
@@ -23,43 +31,13 @@ for (let i=0; i < shotsInfos.length-1; i++){
 
 
 <style>
-  #gallery{
-    width: 60%;
+  .tag{
+    width: fit-content;
     height: fit-content;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    /* border: 1px solid black; */
-  }
-
-  #gallery .galleryItem img{
-    max-width: 336px;
-    max-height: 336px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  .galleryItem{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .imgItem{
-    width: 33%;
-    height: 100%;
-    /* border: 1px solid black; */
-
-  }
-  .titleItem{
-    width: 66%;
-    height: 100%;
-    align-self: center;
-    /* border: 1px solid pink; */
-  }
-.titleItem h2 span{
-  padding: 0px 8px 4px 8px;
-  /* background-color: white; */
+    background-color: var(--custom-accent-color);
+    margin: 4px;
+    padding: 4px 8px;
+    border-radius: 12px;
+    text-transform: uppercase;
 }
 </style>
