--- a/public/style/socialMedia.css
+++ b/public/style/socialMedia.css
@@ -1,9 +1,9 @@
 
 .socialMedias{
     width: fit-content;
-    height: 100%;
+    height: 100vh;
     position: fixed;
-    float:right;
+    right: 8%;
 }
 
 .socialsContainer {
@@ -14,7 +14,6 @@
     width: 50px;
     height: 50px;
     margin: 8px;
-  /* border: 1px solid black; */
 }
 
 #instagramIcon, #linkedInIcon, #dribbbleIcon{
@@ -24,10 +23,15 @@
 
 @media screen and (max-width:980px) {
 
+    .socialMedias {
+        display:none;
+    }
+
     .socialMedias a{
         width: 80px;
         height: 80px;
         margin: 10px -4px 10px 0;
+        display:none;
     }
     
     #instagramIcon, #linkedInIcon, #dribbbleIcon{
