--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -16,6 +16,9 @@
             <div class="contactTitles">
                 <h1>CONTACT ME</h1>
             </div>
+            <div id="socialMedia">
+                <%- include('../partials/contactSocialMedia')%>
+            </div>
         </div>
         <div id="moreDiv">
             <div class="contactTitle">
