--- a/views/partials/heads/artworksHead.ejs
+++ b/views/partials/heads/artworksHead.ejs
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
-<title>Gallery</title>
-<link rel="stylesheet" href="/style/artworks.css">
+<title><%-  parsed_setting_desc.menu[0] %></title>
+<!-- <link rel="stylesheet" href="/style/artworks.css"> -->
 <%- include('../heads/commonHead'); %>
