--- a/views/partials/heads/homeHead.ejs
+++ b/views/partials/heads/homeHead.ejs
@@ -1,5 +1,4 @@
 <meta charset="UTF-8">
-<title>Welcome</title>
+<title><%-  parsed_setting_desc.menu[4] %></title>
 <link rel="stylesheet" href="/style/homepage.css">
-<link rel="stylesheet" href="/style/socialMedia.css">
 <%- include('../heads/commonHead'); %>
