--- a/views/partials/heads/contactHead.ejs
+++ b/views/partials/heads/contactHead.ejs
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
-<title>Contact me</title>
+<title><%-  parsed_setting_desc.menu[2] %></title>
 <link rel="stylesheet" href="/style/contact.css">
 <%- include('../heads/commonHead') %>
