--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row d-flex justify-content-center align-items-center header">
     <div class="col-md-2  d-flex justify-content-end logo">
         <a href="home"><img src="<%- userInfos.avatar_url %>"></a>
     </div>
