--- a/public/style/style.css
+++ b/public/style/style.css
@@ -13,9 +13,9 @@ body{
     /* overflow-x: hidden; */
 }
 
-.container {
+/* .container {
     border: 1px cyan solid;
-}
+} */
 
 body{
     padding-top:50px;
